# AutoDoc

./: extract_classes.py  pyproject.toml
examples/: summary.py
src/autodoc/: __init__.py
