[project]
name = "autodoc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Viagounet", email = "ismael.rousseau@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
autodoc = "autodoc:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
